feat: prepare kiosk changes for deploy